# mcp-cloud-wrappers

./: .gitignore  Makefile  README.md  cdk.json  package-lock.json  package.json  pyproject.toml
infra/: app.py
infra/cdk_constructs/: __init__.py  auth_setup.py  bundler.py  cognito.py  dcr_bridge.py  mcp_gateway.py  mcp_lambda.py  oauth_bridge.py
infra/lambda/auth_setup/: handler.py  requirements.txt
infra/lambda/dcr/: handler.py
infra/lambda/interceptor/: handler.py
infra/lambda/oauth_callback/: handler.py
infra/lambda/services/msgraph/: handler.py  oauth.json  requirements.txt  requirements.txt.example  service.env  tools.json
infra/stacks/: __init__.py  service.py  shared.py
scripts/: gen_tools.py  open_auth_page.py  podman-cdk.sh  verify_deployment.py
tests/: test_dcr_handler.py
